# NotificationManager

./: CMakeLists.txt  README.md  THIRD_PARTY_LICENSES
include/: plugin_definitions.h  ts3_functions.h
include/teamlog/: logtypes.h
include/teamspeak/: public_definitions.h  public_errors.h  public_errors_rare.h  public_rare_definitions.h
src/: plugin.c  plugin.h
